<resources>
    <string name="app_name">Qaza tracker</string>
    <string name="calculation_first_header">Чтобы узнать точное число каза намазов введите данные о себе</string>
    <string name="calculation_second_header">*Ваши данные используются только для вычисления</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="birth_date">День рождения</string>
    <string name="baligat_date">Возраст совершоннолетия</string>
    <string name="unknown">Не знаю</string>
    <string name="solat_start_date">Дата начала молитвы</string>
    <string name="days_in_sapar">Количество дней в сапаре</string>
    <string name="days_haiz">Количество дней хайз в каждом месяце</string>
    <string name="born_count">Количество родов до начала молитвы</string>
    <string name="calculate">Рассчитать</string>
    <string name="back">Назад</string>
    <string name="baligat_not_valid">Не верный возраст балигат</string>
    <string name="ok">Хорошо</string>
    <string name="exception">Ошибка</string>
    <string name="activity_start_screen_yes">Да, знаю</string>
    <string name="activity_start_screen_no_help">Нет, помогите рассчитать</string>
    <string name="activity_start_screen_do_you_qaza_count">Вы знаете точное количество каза намазов?</string>
    <string name="activity_start_screen_app_description">Это приложение поможет вам рассчитать количество каза намазов</string>
    <string name="activity_start_screen_salam">Ас саляму алейкум!</string>
    <string name="save">Сохранить</string>
    <string name="language_title">Выбор языка</string>
    <string name="data_reset">Сбросить данные</string>
    <string name="setting">Настройки</string>
    <string name="about_qaza_solat">О каза намазе</string>
    <string name="about_us">Насчет предложении</string>
    <string name="kazakh_lang">Казахский</string>
    <string name="russian_lang">Русский</string>
    <string name="select_language">Выберите язык</string>
    <string name="gender">Ваш пол</string>
    <string name="calculate_qaza_count">Рассчитать каза намазы</string>
    <string name="completed_qaza_fmt">Завершено: %1$s %%</string>
    <string name="total_prayed_qaza">Все восполненные: %1$d</string>
    <string name="total_remain_qaza">Осталось: \n %1$d</string>
    <string name="fajr">Фаджр</string>
    <string name="zuhr">Зухр</string>
    <string name="asr">Аср</string>
    <string name="magrib">Магриб</string>
    <string name="isha">Иша</string>
    <string name="utir">Витр</string>
    <string name="progress_assumption_header">Если совершать по </string>
    <string name="progress_assumption_footer">намазу в день</string>
    <string name="progress_assumption_info">полностью завершите за %1$d дней</string>
    <string name="change_qaza">Изменить каза намазы</string>
    <string name="info_change_qaza">Чтобы внести дополнительные каза намазы нажмите на «+», а если хотите уменьшить нажмите на «-»</string>
    <string name="your_qaza_solats">Ваши каза намазы</string>
    <string name="reset_message">"Вы уверен что хотите сбросить все данные ваших каза намазов? "</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="contact_telegram">Насчет предложении и ошибок</string>
    <string name="social_network">Salam.Apps</string>
    <string name="solat_sapar">Сафар</string>
    <string name="activity_lang_select">Выберите язык приложения</string>
    <string name="action_change">Изменить</string>
    <string name="sapar_qaza_remainder">Оставшиеся сафар каза:</string>
    <string name="qaza_remainder">Осталось:</string>
    <string name="qaza_completed">Возмещено:</string>
    <string name="all_remaining_qaza">Оставшиеся все каза</string>
    <string name="qazas">Каза</string>
    <string name="sapar_qazas">Сапар каза</string>
    <string name="decrease_one_qaza">-1 каза</string>
    <string name="increate_one_qaza">+1 каза</string>
    <string name="error_loading_qaza">При загрузке каза произошла ошибка</string>
    <string name="fasting">Пост</string>
    <string name="total_completed_qaza">восполненные каза</string>
    <string name="total_remaining_qaza">оставшиеся каза</string>
    <string name="one_qaza_added">добавлен</string>
    <string name="one_qaza_completed">восполнен</string>
</resources>
