<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.menu.MenuFragment"
    >

    <TextView
        android:id="@+id/about_qaza_solat_text_view"
        style="@style/menu_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_qaza_solat"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/settings_text_view"
        style="@style/menu_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/setting"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/about_us_text_view"
        style="@style/menu_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        />

    <TextView
        android:drawablePadding="8dp"
        android:id="@+id/telegram_text_view"
        style="@style/menu_item_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telegram: https://t.me/iamsyrym"
        />

</LinearLayout>