<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".startscreen.StartScreenActivity">

    <TextView
        android:id="@+id/start_screen_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/activity_start_screen_do_you_qaza_count"
        android:textAlignment="center"
        android:textColor="@color/black_gray_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="6dp"
        android:padding="10dp"
        android:text="@string/activity_start_screen_no_help"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/help_calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/help_calculate_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:text="@string/activity_start_screen_yes"
        android:textAllCaps="false"
        android:textColor="@color/color_primary"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/color_primary"
        app:rippleColor="@color/color_primary"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>